update landing page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/styles.css">
-    <title>banana speak</title>
+    <title>yoda speak</title>
 </head>
 <body>
     <header class="hero">
-        <h1>banana talk</h1>
+        <h1>yoda talk</h1>
     </header>
     <main>
         <textarea id="txt-input" placeholder="Enter any sentence in English and it will convert it into Yoda."></textarea>
