--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header class="hero">
-        <h1>yoda talk</h1>
+        <h1>Yoda Talk</h1>
     </header>
     <main>
         <textarea id="txt-input" placeholder="Enter any sentence in English and it will convert it into Yoda."></textarea>
-        <button id="btn-translate">Translate to Yoda</button>
+        <button id="btn-translate">Translate to Yodish</button>
         <div>Translation will come here 👇</div>
         <div id="output"></div>
     </main>
